--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@babel/plugin-transform-runtime": "^7.17.0",
     "axios": "^0.26.1",
     "bulma": "^0.9.3",
+    "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.2"
