--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "bulma": "^0.9.3",
     "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
+    "react-clock": "^3.1.0",
     "react-datepicker": "^4.7.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.2"
